# django-image-cropping-proxy-bug

./: .gitignore  manage.py  pyproject.toml  requirements.txt
src/bug_report/: asgi.py  settings.py  urls.py  wsgi.py
src/example_app/: admin.py  models.py
src/example_app/migrations/: 0001_initial.py  0002_alter_examplemodel_image.py
